# airflow-file-auth-manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  configuration.md  index.md  installation.md  roles.md  security.md  user-management.md
examples/: users.yaml
src/airflow_file_auth_manager/: __init__.py  cli.py  endpoints.py  file_auth_manager.py  password.py  policy.py  user.py  user_store.py
src/airflow_file_auth_manager/static/: styles.css
src/airflow_file_auth_manager/templates/: login.html
tests/: __init__.py  conftest.py  test_file_auth_manager.py  test_password.py  test_policy.py  test_user_store.py
